--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="sweetalert2.min.css">
     <link rel="stylesheet" href="../src/style.css">
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -47,6 +48,7 @@
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
     <script src="../src/index.js"></script>
+    <script src="sweetalert2.min.js"></script>
 </body>
 
 </html>
